--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -26,7 +26,9 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${python_srcs})
 if(BUILD_WHEEL)
   set(WHEEL_FILES_DIR "${CMAKE_BINARY_DIR}/wheel")
   message("Setting up wheel files in : ${WHEEL_FILES_DIR}")
-  if(USE_WINML)
+  if(USE_TRT_RTX)
+    set(TARGET_NAME "onnxruntime-genai-trt-rtx")
+  elseif(USE_WINML)
     set(TARGET_NAME "onnxruntime-genai-winml")
   elseif(USE_CUDA)
     set(TARGET_NAME "onnxruntime-genai-cuda")
