--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -59,7 +59,8 @@ if(BUILD_WHEEL)
     # Use a new directory to fix the onnxruntime_genai runtime dependency and avoid contamination
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${WHEEL_TARGET_NAME} ${GENERATE_TYPE_DIR}
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${ORT_LIB_DIR} ${GENERATE_TYPE_DIR}
-    COMMAND ${PYTHON_EXECUTABLE} -m pip install pybind11-stubgen
+    # Also installing numpy as a dependency for stub generation
+    COMMAND ${PYTHON_EXECUTABLE} -m pip install pybind11-stubgen numpy
     COMMAND ${PYTHON_EXECUTABLE} -m pybind11_stubgen $<TARGET_FILE_BASE_NAME:python> --output-dir ${WHEEL_TARGET_NAME}
     COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/fix_pyi.py -i ${WHEEL_TARGET_NAME}/$<TARGET_FILE_BASE_NAME:python>.pyi
     WORKING_DIRECTORY ${GENERATE_TYPE_DIR}
