--- a/src/python/setup.py.in
+++ b/src/python/setup.py.in
@@ -46,9 +46,9 @@ def _onnxruntime_dependency() -> str:
     else:
         raise ValueError(f'Unable to determine the onnxruntime dependency for {package_name}.')
 
-    # For onnxruntime-trt-rtx, don't add version constraint:
+    # For onnxruntime-trt-rtx, use specific version 1.23.0:
     if dependency == "onnxruntime-trt-rtx":
-        return dependency
+        return "onnxruntime-trt-rtx==1.23.0"
     
     return dependency if not ort_version else dependency + ">=" + ort_version
 
