--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -89,9 +89,9 @@ parameters:
   - name: build_config
     displayName: 'Build Configuration'
     type: string
-    default: 'relwithdebinfo'
+    default: 'release'
     values:
-      - 'relwithdebinfo'
+      - 'release'
       - 'debug'
 
   - name: 'nuget_version_type'
