Try to fix signing

--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -92,6 +92,7 @@ parameters:
     default: 'release'
     values:
       - 'release'
+      - 'relwithdebinfo'
       - 'debug'
 
   - name: 'nuget_version_type'
