Address macos packaging pipeline issues (#1747)
A recent PR #1711 introduced changes that made our packaging pipeline
build with the relwithdebinfo config. Unfortunately, the cmake presets
for relwithdebinfo for macos were not defined and resulted in packaging
failures.

This pr addresses the issue.

---------

Co-authored-by: Baiju Meswani <baijumeswani@Baijus-Mac-mini.local>

--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -89,8 +89,9 @@ parameters:
   - name: build_config
     displayName: 'Build Configuration'
     type: string
-    default: 'relwithdebinfo'
+    default: 'release'
     values:
+      - 'release'
       - 'relwithdebinfo'
       - 'debug'
 
