Change default build configuration to 'relwithdebinfo'

--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -89,7 +89,7 @@ parameters:
   - name: build_config
     displayName: 'Build Configuration'
     type: string
-    default: 'release'
+    default: 'relwithdebinfo'
     values:
       - 'release'
       - 'relwithdebinfo'
