--- a/.github/workflows/win-cuda-x64-build.yml
+++ b/.github/workflows/win-cuda-x64-build.yml
@@ -14,9 +14,9 @@ concurrency:
 env:
   AZCOPY_AUTO_LOGIN_TYPE: MSI
   AZCOPY_MSI_CLIENT_ID: 63b63039-6328-442f-954b-5a64d124e5b4
-  cuda_dir: "${{ github.workspace }}\\cuda_sdk"
+  cuda_dir: "${{ github.workspace }}\cuda_sdk"
   cuda_version: "12.2"
-  CUDA_PATH: ${{ github.workspace }}\\cuda_sdk\\v12.2
+  CUDA_PATH: ${{ github.workspace }}\cuda_sdk\v12.2
   binaryDir: 'build/cuda/win-x64'
   ORT_NIGHTLY_REST_API: "https://feeds.dev.azure.com/aiinfra/PublicPackages/_apis/packaging/Feeds/ORT-Nightly/packages?packageNameQuery=Microsoft.ML.OnnxRuntime.Gpu.Windows&api-version=6.0-preview.1"
   ORT_PACKAGE_NAME: "Microsoft.ML.OnnxRuntime.Gpu.Windows"
@@ -36,7 +36,7 @@ jobs:
           architecture: 'x64'
 
       - name: Setup VCPKG
-        uses: microsoft/onnxruntime-github-actions/setup-build-tools@v0.0.6
+        uses: microsoft/onnxruntime-github-actions/setup-build-tools@v0.0.8
         with:
           vcpkg-version: '2025.03.19'
           vcpkg-hash: '17e96169cd3f266c4716fcdc1bb728e6a64f103941ece463a2834d50694eba4fb48f30135503fd466402afa139abc847ef630733c442595d1c34979f261b0114'
@@ -80,7 +80,7 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake --preset windows_x64_cuda_release -T cuda=${{ env.cuda_dir }}\\v${{ env.cuda_version }}
+          cmake --preset windows_x64_cuda_release -T cuda=${{ env.cuda_dir }}\v${{ env.cuda_version }}
 
       - name: Build with CMake
         run: |
@@ -89,7 +89,7 @@ jobs:
 
       - name: Add CUDA to PATH
         run: |
-          echo "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "${{ env.cuda_dir }}\v${{ env.cuda_version }}\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Install the Python Wheel and Test Dependencies
         run: |
@@ -111,13 +111,13 @@ jobs:
 
       - name: Build the C# API and Run the C# Tests
         run: |
-          $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH
+          $env:PATH = "${{ env.cuda_dir }}\v${{ env.cuda_version }}\bin;" + $env:PATH
           cd test\csharp
           dotnet test /p:Configuration=release /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
 
       - name: Prepend CUDA to PATH and Run tests
         run: |-
-          $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH 
+          $env:PATH = "${{ env.cuda_dir }}\v${{ env.cuda_version }}\bin;" + $env:PATH 
           echo "Current PATH variable is: $env:PATH" 
           copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Release
           & .\$env:binaryDir\Release\unit_tests.exe
