--- a/.github/workflows/win-winml-x64-build.yml
+++ b/.github/workflows/win-winml-x64-build.yml
@@ -14,9 +14,9 @@ concurrency:
 env:
   AZCOPY_AUTO_LOGIN_TYPE: MSI
   AZCOPY_MSI_CLIENT_ID: 63b63039-6328-442f-954b-5a64d124e5b4
-  cuda_dir: "${{ github.workspace }}\\cuda_sdk"
+  cuda_dir: "${{ github.workspace }}\cuda_sdk"
   cuda_version: "12.2"
-  CUDA_PATH: ${{ github.workspace }}\\cuda_sdk\\v12.2
+  CUDA_PATH: ${{ github.workspace }}\cuda_sdk\v12.2
   binaryDir: 'build/cuda/win-x64'
   ORT_NIGHTLY_REST_API: "https://feeds.dev.azure.com/aiinfra/PublicPackages/_apis/packaging/Feeds/ORT-Nightly/packages?packageNameQuery=Microsoft.ML.OnnxRuntime.Gpu.Windows&api-version=6.0-preview.1"
   ORT_PACKAGE_NAME: "Microsoft.ML.OnnxRuntime.Gpu.Windows"
@@ -36,7 +36,7 @@ jobs:
           architecture: 'x64'
 
       - name: Setup VCPKG
-        uses: microsoft/onnxruntime-github-actions/setup-build-tools@v0.0.6
+        uses: microsoft/onnxruntime-github-actions/setup-build-tools@v0.0.8
         with:
           vcpkg-version: '2025.03.19'
           vcpkg-hash: '17e96169cd3f266c4716fcdc1bb728e6a64f103941ece463a2834d50694eba4fb48f30135503fd466402afa139abc847ef630733c442595d1c34979f261b0114'
@@ -62,9 +62,10 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake --preset windows_x64_winml_relwithdebinfo -T cuda=${{ env.cuda_dir }}\\v${{ env.cuda_version }} -DWINML_SDK_VERSION='1.8.2091'
+          cmake --preset windows_x64_winml_relwithdebinfo -T cuda=${{ env.cuda_dir }}\v${{ env.cuda_version }} -DWINML_SDK_VERSION='1.8.2091'
 
       - name: Build with CMake
         run: |
           cmake --build --preset windows_x64_winml_relwithdebinfo --parallel
           cmake --build --preset windows_x64_winml_relwithdebinfo --target PyPackageBuild
+
