Add cmake presets congit for the trt-rtx build

--- a/cmake/presets/CMakeWinConfigPresets.json
+++ b/cmake/presets/CMakeWinConfigPresets.json
@@ -29,6 +29,15 @@
       }
     },
     {
+      "name": "windows_trt_rtx_default",
+      "inherits": "windows_cpu_default",
+      "cacheVariables": {
+        "USE_TRT_RTX": "ON",
+        "CMAKE_CUDA_ARCHITECTURES": "80;86;89;120",
+        "CMAKE_CUDA_FLAGS_INIT": "/DWIN32 /D_WINDOWS /DWINAPI_FAMILY=100 /DWINVER=0x0A00 /D_WIN32_WINNT=0x0A00 /DNTDDI_VERSION=0x0A000000 -Xcompiler=\" /MP /guard:cf /Qspectre \" -allow-unsupported-compiler"
+      }
+    },
+    {
       "name": "windows_directml_default",
       "inherits": "windows_cpu_default",
       "cacheVariables": {
@@ -241,6 +250,30 @@
       "binaryDir": "${sourceDir}/build/cuda/win-x64",
       "cacheVariables": {
         "USE_CUDA": "ON"
+      }
+    },
+    {
+      "name": "windows_x64_trt_rtx_release",
+      "inherits": [
+        "windows_release_default",
+        "windows_trt_rtx_default"
+      ],
+      "displayName": "windows x64 trt_rtx release",
+      "binaryDir": "${sourceDir}/build/trt_rtx/win-x64",
+      "cacheVariables": {
+        "USE_TRT_RTX": "ON"
+      }
+    },
+    {
+      "name": "windows_x64_trt_rtx_debug",
+      "inherits": [
+        "windows_debug_default",
+        "windows_trt_rtx_default"
+      ],
+      "displayName": "windows x64 trt_rtx debug",
+      "binaryDir": "${sourceDir}/build/trt_rtx/win-x64",
+      "cacheVariables": {
+        "USE_TRT_RTX": "ON"
       }
     },
     {
