--- a/src/python/setup.py.in
+++ b/src/python/setup.py.in
@@ -46,9 +46,10 @@ def _onnxruntime_dependency() -> str:
     else:
         raise ValueError(f'Unable to determine the onnxruntime dependency for {package_name}.')
 
-    # For onnxruntime-trt-rtx, use specific version 1.23.0:
+    # For onnxruntime-trt-rtx, use specific version from environment variable
     if dependency == "onnxruntime-trt-rtx":
-        return "onnxruntime-trt-rtx==1.23.0"
+        trt_rtx_version = os.environ.get('ONNXRUNTIME_VERSION', '1.23.0')
+        return f"onnxruntime-trt-rtx=={trt_rtx_version}"
     
     return dependency if not ort_version else dependency + ">=" + ort_version
 
