--- a/.github/workflows/win-cuda-x64-build.yml
+++ b/.github/workflows/win-cuda-x64-build.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake --preset windows_x64_cuda_release -T cuda=${{ env.cuda_dir }}\v${{ env.cuda_version }}
+          cmake --preset windows_x64_cuda_release -T cuda=${{ env.cuda_dir }}\\v${{ env.cuda_version }}
 
       - name: Build with CMake
         run: |
@@ -89,7 +89,7 @@ jobs:
 
       - name: Add CUDA to PATH
         run: |
-          echo "${{ env.cuda_dir }}\v${{ env.cuda_version }}\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Install the Python Wheel and Test Dependencies
         run: |
@@ -111,13 +111,13 @@ jobs:
 
       - name: Build the C# API and Run the C# Tests
         run: |
-          $env:PATH = "${{ env.cuda_dir }}\v${{ env.cuda_version }}\bin;" + $env:PATH
+          $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH
           cd test\csharp
           dotnet test /p:Configuration=release /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
 
       - name: Prepend CUDA to PATH and Run tests
         run: |-
-          $env:PATH = "${{ env.cuda_dir }}\v${{ env.cuda_version }}\bin;" + $env:PATH 
+          $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH 
           echo "Current PATH variable is: $env:PATH" 
           copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Release
           & .\$env:binaryDir\Release\unit_tests.exe
