Add TRT_RTX support for onnxruntime-genai-trt-rtx wheel (#1736)
This commit introduces a new Python wheel variant
'onnxruntime-genai-trt-rtx'

Changes
- onnxruntime-genai-trt-rtx depends on 'onnxruntime-trt-rtx' package 
- Include the same DLLs: onnxruntime-genai.dll +
onnxruntime-genai-cuda.dll
- Add --use_trt_rtx build flag
- Add USE_TRT_RTX CMake option 
- Update dependency mapping for onnxruntime-trt-rtx

--- a/src/python/setup.py.in
+++ b/src/python/setup.py.in
@@ -37,13 +37,16 @@ def _onnxruntime_dependency() -> str:
             dependency = "onnxruntime-qnn"
     elif package_name == "onnxruntime-genai-cuda":
         dependency = "onnxruntime-gpu"
+    elif package_name == "onnxruntime-genai-trt-rtx":
+        dependency = "onnxruntime-trt-rtx"
+        ort_version = os.environ.get('ONNXRUNTIME_VERSION', '1.23.0')
     elif package_name == "onnxruntime-genai-directml":
         dependency = "onnxruntime-directml"
     elif package_name == "onnxruntime-genai-rocm":
         dependency = "onnxruntime-rocm"
     else:
         raise ValueError(f'Unable to determine the onnxruntime dependency for {package_name}.')
-
+    
     return dependency if not ort_version else dependency + ">=" + ort_version
 
 def _get_install_requires():
