--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -48,6 +48,9 @@ jobs:
           add-cmake-to-path: 'true'
           disable-terrapin: 'true'
 
+      - name: Install OpenSSL development libraries
+        run: sudo apt-get install -y libssl-dev pkg-config
+
       - name: Install Rust with rustup
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
