Fix CMake error: Remove find_package(nanobind CONFIG)
nanobind is already added via add_subdirectory() in the root
CMakeLists.txt through onnxruntime_external_deps.cmake.
The find_package(nanobind CONFIG) call was causing CMake errors
because nanobind doesn't provide a config file when added as a
subdirectory - it makes nanobind_add_module() and the nanobind::nanobind
target available directly.

This fixes the build failures in CI where CMake couldn't find nanobind.

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -140,9 +140,8 @@ if(ENABLE_TESTS)
     GTest::gtest_main
   )
   
-  # Add nanobind includes
+  # Add nanobind includes (nanobind is already added via add_subdirectory in root CMakeLists)
   find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)
-  find_package(nanobind CONFIG REQUIRED)
   target_link_libraries(test_borrowed_view PRIVATE nanobind::nanobind)
   
   # Register test with CTest
